--- a/SeriesSelector/app.config
+++ b/SeriesSelector/app.config
@@ -11,17 +11,17 @@
     <applicationSettings>
         <SeriesSelector.Properties.Settings>
             <setting name="MappingPath" serializeAs="String">
-                <value>E:\My Files\Dokumente\SeriesSelectorResources\Mappings.xml</value>
+                <value>C:\Users\LordTakeshiXVII\Documents\seriesselectortestfiles\mappings\Mappings.xml</value>
             </setting>
         </SeriesSelector.Properties.Settings>
     </applicationSettings>
     <userSettings>
         <SeriesSelector.Properties.Settings>
             <setting name="SourcePath" serializeAs="String">
-                <value>E:\My Files\Dokumente\DreamloadDownloads</value>
+                <value>C:\Users\LordTakeshiXVII\Documents\seriesselectortestfiles\source</value>
             </setting>
             <setting name="DestinationPath" serializeAs="String">
-                <value>L:\External Videos\Serien</value>
+                <value>C:\Users\LordTakeshiXVII\Documents\seriesselectortestfiles\destination</value>
             </setting>
         </SeriesSelector.Properties.Settings>
     </userSettings>
