--- a/SeriesSelector/Properties/Settings.settings
+++ b/SeriesSelector/Properties/Settings.settings
@@ -3,13 +3,13 @@
   <Profiles />
   <Settings>
     <Setting Name="MappingPath" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">E:\My Files\Dokumente\SeriesSelectorResources\Mappings.xml</Value>
+      <Value Profile="(Default)">C:\Users\LordTakeshiXVII\Documents\seriesselectortestfiles\mappings\Mappings.xml</Value>
     </Setting>
     <Setting Name="SourcePath" Type="System.String" Scope="User">
-      <Value Profile="(Default)">E:\My Files\Dokumente\DreamloadDownloads</Value>
+      <Value Profile="(Default)">C:\Users\LordTakeshiXVII\Documents\seriesselectortestfiles\source</Value>
     </Setting>
     <Setting Name="DestinationPath" Type="System.String" Scope="User">
-      <Value Profile="(Default)">L:\External Videos\Serien</Value>
+      <Value Profile="(Default)">C:\Users\LordTakeshiXVII\Documents\seriesselectortestfiles\destination</Value>
     </Setting>
   </Settings>
 </SettingsFile>
