--- a/SeriesSelector/Properties/Settings.settings
+++ b/SeriesSelector/Properties/Settings.settings
@@ -2,14 +2,11 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="SeriesSelector.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="MappingPath" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">C:\Users\LordTakeshiXVII\Documents\seriesselectortestfiles\mappings\Mappings.xml</Value>
-    </Setting>
     <Setting Name="SourcePath" Type="System.String" Scope="User">
-      <Value Profile="(Default)">C:\Users\LordTakeshiXVII\Documents\seriesselectortestfiles\source</Value>
+      <Value Profile="(Default)">C:\Users\abo\Desktop\source</Value>
     </Setting>
     <Setting Name="DestinationPath" Type="System.String" Scope="User">
-      <Value Profile="(Default)">C:\Users\LordTakeshiXVII\Documents\seriesselectortestfiles\destination</Value>
+      <Value Profile="(Default)">C:\Users\abo\Desktop\destination</Value>
     </Setting>
   </Settings>
 </SettingsFile>
