--- a/SeriesSelector/app.config
+++ b/SeriesSelector/app.config
@@ -1,27 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
     <configSections>
-        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="SeriesSelector.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-        </sectionGroup>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
             <section name="SeriesSelector.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
-    <applicationSettings>
-        <SeriesSelector.Properties.Settings>
-            <setting name="MappingPath" serializeAs="String">
-                <value>C:\Users\LordTakeshiXVII\Documents\seriesselectortestfiles\mappings\Mappings.xml</value>
-            </setting>
-        </SeriesSelector.Properties.Settings>
-    </applicationSettings>
     <userSettings>
         <SeriesSelector.Properties.Settings>
             <setting name="SourcePath" serializeAs="String">
-                <value>C:\Users\LordTakeshiXVII\Documents\seriesselectortestfiles\source</value>
+                <value>C:\Users\abo\Desktop\source</value>
             </setting>
             <setting name="DestinationPath" serializeAs="String">
-                <value>C:\Users\LordTakeshiXVII\Documents\seriesselectortestfiles\destination</value>
+                <value>C:\Users\abo\Desktop\destination</value>
             </setting>
         </SeriesSelector.Properties.Settings>
     </userSettings>
